Add feature order

--- a/.env-dev
+++ b/.env-dev
@@ -1,3 +1,7 @@
 # Elasticsearch
-
-ELASTICSEARCH_API_KEY = 
+ELASTICSEARCH_API_KEY=
+ELASTIC_CERT_PATH=
+ELASTICSEARCH_USERNAME=
+ELASTICSEARCH_PASSWORD=
+ELASTIC_ADDRESS=
+ELASTIC_CLOUD_ID=
